--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -25,7 +25,7 @@
               </ul>
 			  </div>
 			</li>
-            <li><%= button_to "Создать объявление", "/add_missing/", :method => :get, :class => "t-medium_fat silver blow l-full_width"%></li>
+            <li><%= button_to "Создать объявление", "/missings/new", :method => :get, :class => "t-medium_fat silver blow l-full_width"%></li>
 		</ul>	
 	</div>
 	
